Fix vertical alignment of expand details button Fix colspan of details cells

--- a/src/plugins/discover/public/application/components/default_discover_table/_table_cell.scss
+++ b/src/plugins/discover/public/application/components/default_discover_table/_table_cell.scss
@@ -2,8 +2,8 @@
   border-top: none !important;
 }
 
-.osdDocTableCell__toggleDetails {
-  padding: 7px 0 0 4px;
+.osd-table td.osdDocTableCell__toggleDetails {
+  padding: 5px 0 0 4px;
 }
 
 /**
